# naswa-ai-apprenticeship-matcher

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  TODO.md  db.py  pyproject.toml  server.py
data/: area-sheet-metal-workers-jatc-lu112-elmira-0-sheet-metal-worker-apprentice.json  asbestos-workers-jac-lu-91-0-insulation-and-asbestos-worker-apprentice.json  asbestos-workers-jac-lu-91-insulation-and-asbestos-worker-apprentice.json  bac-local-1-hudson-valley-bricklayer-mason-and-plasterer-apprentice.json  boilermakers-northeast-local-5-boilermaker-construction-apprentice.json  boilermakers-northeastern-jac-local-5-zone-7-0-boilermaker-construction-apprentice.json  boilermakers-northeastern-jac-local-5-zone-7-boilermaker-construction-apprentice.json  boilermakers-northeastern-jac-lu-5-zone-197-boilermaker-construction-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-oswego-0-bricklayer-mason-and-plasterer-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-oswego-bricklayer-mason-plasterer-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-syracuse-1-bricklayer-mason-and-plasterer-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-syracuse-1-bricklayer-mason-plasterer-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-syracuse-1-cement-finisher-cement-mason-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-syracuse-1-cement-finisher-or-cement-mason-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-syracuse-1-pointer-caulker-and-cleaner-apprentice.json  bricklayers-allied-craftworkers-jac-local-2-syracuse-1-pointer-caulker-cleaner-apprentice.json  (+156 more)
infra/: README.md
naswa_matcher/: agents.py  db.py  profile.py  (+8 more)
(+157 files in other folders)
