[project]
name = "naswa-ai-apprenticeship-matcher"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.0.0",
    "strands-agents>=1.40.0",
    "strands-agents-tools>=0.5.3",
    "uvicorn>=0.34.0",
]
