[project]
name = "naswa-ai-apprenticeship-matcher"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "botocore[crt]>=1.43.9",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.0.0",
    "strands-agents>=1.40.0",
    "strands-agents-tools>=0.5.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py314"]