[project]
name = "naswa-ai-apprenticeship-matcher"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "botocore[crt]>=1.43.42",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sse-starlette>=2.0.0",
    "strands-agents>=1.45.0",
    "strands-agents-tools>=0.8.2",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "black",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
target-version = ["py314"]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
